rnsc/tests/snapshots/error-parser-type_hints-methodref-no_operand_2_recovers.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class   @methodref MyClass
.unknown ; <- still reported
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/rns_integration/error/parser/type_hints/methodref/no_operand_2_recovers.rns:2:1 ]
   │
 2 │ .unknown ; <- still reported
   │ ────┬───  
   │     ╰───── '.unknown' is not a recognized directive
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-002
───╯
----- HASH -----
not generated
